# PFF_Project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
PFF_Project/: README.md  requirements.txt  setup.py
PFF_Project/pff_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PFF_Project/src/: __init__.py
PFF_Project/src/models/: base_model.py  classification.py  clustering.py  regression.py
PFF_Project/src/themes/: base_theme.py  futuristic_theme.py  gaming_theme.py  got_theme.py  zombie_theme.py
PFF_Project/src/utils/: data_loader.py  visualizations.py
src/: __init__.py
src/models/: base_model.py  classification.py  clustering.py  regression.py
src/themes/: __init__.py  base_theme.py  futuristic_theme.py  gaming_theme.py  got_theme.py  zombie_theme.py
src/utils/: data_loader.py  visualizations.py
